# bigweld

./: .eslintrc.json  .gitignore  .replit  Dockerfile  README.md  bigweld.py  instance.tf  keep_alive.py  keypair.tf  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: client.ts  config.example.jsonc  errors.ts  index.ts  registerCommands.ts
src/commands/: clear.ts  join.ts  leave.ts  list.ts  pause.ts  ping.ts  play.ts  skip.ts  unpause.ts  user.ts  validate.ts
src/events/: clientReady.ts  event.ts  interactionCreate.ts  ready.ts  voiceStateUpdate.ts
src/helpers/: duration.ts  error.ts
src/models/: command.ts  event.ts  query.ts  track.ts
src/services/: commandService.ts  eventService.ts  messageService.ts  musicService.ts  trackService.ts  voiceService.ts
youtube_dl/extractor/: youtube.py
