[tool.poetry]
name = "repl_python3_bigweld"
version = "0.1.0"
description = ""
authors = ["alpoi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
python-dotenv = "^0.19.2"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
sty = "^1.0.0-rc.2"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
